--- a/templates/writing/index.html
+++ b/templates/writing/index.html
@@ -1,9 +1,13 @@
+{% extends "writing/main_form.html" %}
+
+{% block contents %}
 <html>
     {% for writing in writings %}
         <h3>{{ writing.id }} | {{ writing.title }}</h3>
-        <div>{{ writing.contents }}</div>
+        <div>{{ writing.contents|truncatewords:50 }}</div>
         <div>{{ writing.uploaded_time }}</div>
         <p>-----------------------------------------------------------------</p>
     {% endfor %}
     <button onclick="location.href='{% url 'writing:write_form' %}'">글쓰기</button>
 </html>
+{% endblock %}
