--- a/templates/writing/write_form.html
+++ b/templates/writing/write_form.html
@@ -1,9 +1,8 @@
-<form action="{% url 'writing:write' %}" method="post">{%  csrf_token %}
-    제목 :
-    <input type="text" name="title"/>
-    내용 :
-    <textarea name="contents"></textarea>
-    태그 :
-    <input type="text" name="tags"/>
+{% extends "writing/main_form.html" %}
+
+{% block contents %}
+<form action="{% url 'writing:write' %}" method="post">{% csrf_token %}
+    {{ write_form.as_p }}
     <input type="submit"/>
 </form>
+{% endblock %}
