--- a/templates/writing/index.html
+++ b/templates/writing/index.html
@@ -8,6 +8,6 @@
         <div>{{ writing.uploaded_time }}</div>
         <p>-----------------------------------------------------------------</p>
     {% endfor %}
-    <button onclick="location.href='{% url 'writing:write_form' %}'">글쓰기</button>
+    <button onclick="location.href='{% url 'writing:write' %}'">글쓰기</button>
 </html>
 {% endblock %}
